# fiware-keystone-scim

./: .gitignore  .testr.conf  .travis.yml  ChangeLog  LICENCE  LICENCE_HEADER.txt  README.md  apiary.apib  get_version_string.sh  keystone-scim.spec  package-keystone-scim.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/: keystone-paste.ini  policy.json
keystone_scim/contrib/scim/: __init__.py  controllers.py  converter.py  core.py  routers.py  schemas.py  scim.py
keystone_scim/tests/: test_scim.py
keystone_scim/tests/unit/contrib/scim/: test_converter.py
