[metadata]
name = keystone_scim
version = 1.1.7
summary = Keystone SCIM extension
description-file =
    README.md
author = Telefonica I+D
author-email = david.lopezmiguel@telefonica.com
home-page = https://github.com/telefonicaid
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    keystone_scim

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

# NOTE(dstanek): Uncomment the [pbr] section below and remove the ext.apidoc
# Sphinx extension when https://launchpad.net/bugs/1260495 is fixed.
[pbr]
warnerrors = True
